Fix inconsistent token parameters for kbd_allocate() and kbd_release() in vt(4).

PR:		191306
Submitted by:	jau789@gmail.com
Sponsored by:	The FreeBSD Foundation